sets, a planning step is necessary to determine what should become a
predicate and what a set.  It can be helpful to carry out that step in
Isabelle2011-1 before jumping right into the current release.

* Code generation by default implements sets as container type rather
than predicates.  INCOMPATIBILITY.

* New type synonym 'a rel = ('a * 'a) set

* More default pred/set conversions on a couple of relation operations
and predicates.  Consolidation of some relation theorems:

  converse_def ~> converse_unfold
  rel_comp_def ~> rel_comp_unfold
  symp_def ~> (dropped, use symp_def and sym_def instead)
  transp_def ~> transp_trans
  Domain_def ~> Domain_unfold
  Range_def ~> Domain_converse [symmetric]

Generalized theorems INF_INT_eq, INF_INT_eq2, SUP_UN_eq, SUP_UN_eq2.

See theory "Relation" for examples for making use of pred/set conversions
by means of attributes "to_set" and "to_pred".

INCOMPATIBILITY.

* Consolidated various theorem names relating to Finite_Set.fold
combinator:

  inf_INFI_fold_inf ~> inf_INF_fold_inf
  sup_SUPR_fold_sup ~> sup_SUP_fold_sup
  INFI_fold_inf ~> INF_fold_inf
  SUPR_fold_sup ~> SUP_fold_sup
  union_set ~> union_set_fold
  minus_set ~> minus_set_fold

INCOMPATIBILITY.

* Consolidated theorem names concerning fold combinators:

  INFI_set_fold ~> INF_set_fold
  SUPR_set_fold ~> SUP_set_fold
  INF_code ~> INF_set_foldr
  SUP_code ~> SUP_set_foldr
  foldr.simps ~> foldr_Nil foldr_Cons (in point-free formulation)
  foldl.simps ~> foldl_Nil foldl_Cons
  foldr_fold_rev ~> foldr_def
  foldl_fold ~> foldl_def

INCOMPATIBILITY.

* Dropped rarely useful theorems concerning fold combinators:
foldl_apply, foldl_fun_comm, foldl_rev, fold_weak_invariant,
rev_foldl_cons, fold_set_remdups, fold_set, fold_set1,
concat_conv_foldl, foldl_weak_invariant, foldl_invariant,
foldr_invariant, foldl_absorb0, foldl_foldr1_lemma, foldl_foldr1,
listsum_conv_fold, listsum_foldl, sort_foldl_insort.  INCOMPATIBILITY.