@@ -396,8 +396,6 @@ declare dvd_eq_mod_eq_0[symmetric, presburger]
 declare mod_1[presburger] 
 declare mod_0[presburger]
 declare mod_by_1[presburger]
-declare zmod_zero[presburger]
-declare zmod_self[presburger]
 declare mod_self[presburger]
 declare mod_by_0[presburger]
 declare mod_div_trivial[presburger]
